aplicacion de mediaQ al index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
 
             
-            <a href=""><img src="./assets/img/logo animalitos.png" alt="logo animalitos"></a>
+            <a class="logo" href=""><img  src="./assets/img/logo animalitos.png" alt="logo animalitos"></a>
 
             <nav>
                 <ul>
@@ -29,9 +29,9 @@
                 <input type="text" placeholder="Buscar..." name="q">
             </form>
             
-            <div class="flex text-center text-xl font-bold gap-4 ">
-                <a href=""><img src="./assets/img/male User.png" alt="">Ingresar</a>
-                <a href=""><img src="./assets/img/cart.png" alt="">Carrito</a>
+            <div class="flex text-center text-xl font-bold gap-6">
+                <a class="w-16" href=""><img src="./assets/img/male User.png" alt="">Ingresar</a>
+                <a class="w-16" href=""><img src="./assets/img/cart.png" alt="">Carrito</a>
             </div>
 
         </div>
