index con todos los mediaQ

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a class="logo" href=""><img  src="./assets/img/logo animalitos.png" alt="logo animalitos"></a>
 
             <nav>
-                <ul>
+                <ul class="nav">
                     <li class="active"><a href="#">Inicio</a></li>
                     <li><a href="">Adultos</a></li>
                     <li><a href="">Cachorros</a></li>
@@ -29,7 +29,7 @@
                 <input type="text" placeholder="Buscar..." name="q">
             </form>
             
-            <div class="flex text-center text-xl font-bold gap-6">
+            <div class="icons flex text-center text-xl font-bold gap-6">
                 <a class="w-16" href=""><img src="./assets/img/male User.png" alt="">Ingresar</a>
                 <a class="w-16" href=""><img src="./assets/img/cart.png" alt="">Carrito</a>
             </div>
