maquetacion de pagina adulto con mediaQ

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animalitos - Home</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -18,10 +19,10 @@
             <nav>
                 <ul class="nav">
                     <li class="active"><a href="#">Inicio</a></li>
-                    <li><a href="">Adultos</a></li>
-                    <li><a href="">Cachorros</a></li>
-                    <li><a href="">Gatos</a></li>
-                    <li><a href="">Forraje</a></li>
+                    <li><a href="./pages/adultos.html">Adultos</a></li>
+                    <li><a href="./pages/cachorros.html">Cachorros</a></li>
+                    <li><a href="./pages/gatos.html">Gatos</a></li>
+                    <li><a href="./pages/forraje.html">Forraje</a></li>
                 </ul>
             </nav>
             
@@ -39,7 +40,7 @@
     </header>
 
     <main>
-        <h1 class="title flex justify-center bg-gradient-to-b from-gray-900 to-sky-400 bg-clip-text text-transparent">LO MEJOR PARA TU MASCOTA</h1>
+        <h1 class="title flex justify-center bg-gradient-to-b from-gray-900 to-sky-400 bg-clip-text text-transparent ">LO MEJOR PARA TU MASCOTA</h1>
 
         <section class="banner1 bg-gradient-to-r from-indigo-700 to-sky-500">
             <div class="flex flex-col">
@@ -47,30 +48,30 @@
                 <a href="">para obtener</a>
                 <a href="">envios gratis</a>
             </div>
-                <img src="./assets/img/truck.png" alt="">
+                <img src="./assets/img/truck2.png" alt="">
 
         </section>
 
         <section class="section1">
 
             <article>
-                <a href=""><img src="./assets/img/adulto1.png" alt="Categoria adultos"></a>
-                <a href="">Adultos</a>
+                <a href="./pages/adultos.html"><img src="./assets/img/adulto1.png" alt="Categoria adultos"></a>
+                <a href="./pages/adultos.html">Adultos</a>
             </article>
 
             <article>
-                <a href=""><img src="./assets/img/cachorro1.png" alt="Categoria cachorros"></a>
-                <a href="">Cachorros</a>
+                <a href="./pages/cachorros.html"><img src="./assets/img/cachorro1.png" alt="Categoria cachorros"></a>
+                <a href="./pages/cachorros.html">Cachorros</a>
             </article>
 
             <article>
-                <a href=""><img src="./assets/img/gato1.png" alt="Categoria Gatos"></a>
-                <a href="">Gatos</a>
+                <a href="./pages/gatos.html"><img src="./assets/img/gato1.png" alt="Categoria Gatos"></a>
+                <a href="./pages/gatos.html">Gatos</a>
             </article>
 
             <article>
-                <a href=""><img src="./assets/img/forraje1.png" alt="Categoria Forraje"></a>
-                <a href="">Forraje</a>
+                <a href="./pages/forraje.html"><img src="./assets/img/forraje1.png" alt="Categoria Forraje"></a>
+                <a href="./pages/forraje.html">Forraje</a>
             </article>
 
         </section>
