--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <input type="text" placeholder="Buscar..." name="q">
             </form>
             
-            <div class="icons flex text-center text-xl font-bold gap-6">
-                <a class="w-16" href=""><img src="./assets/img/male User.png" alt="">Ingresar</a>
-                <a class="w-16" href=""><img src="./assets/img/cart.png" alt="">Carrito</a>
+            <div class="icons">
+                <a href=""><img src="./assets/img/male User.png" alt="">Ingresar</a>
+                <a href=""><img src="./assets/img/cart.png" alt="">Carrito</a>
             </div>
 
         </div>
