creacion de pagina cart

--- a/pages/gatos.html
+++ b/pages/gatos.html
@@ -33,7 +33,7 @@
             
             <div class="icons">
                 <a href="./signup.html"><img src="../assets/img/male User.png" alt="">Ingresar</a>
-                <a href=""><img src="../assets/img/cart.png" alt="">Carrito</a>
+                <a href="./cart.html"><img src="../assets/img/cart.png" alt="">Carrito</a>
             </div>
 
         </div>
@@ -41,8 +41,7 @@
 
     <main>
         <!--titulo-->
-        <h1 class="title flex justify-center bg-gradient-to-b from-gray-900 to-sky-400 bg-clip-text text-transparent">LO MEJOR PARA TU MASCOTA</h1>
-        <!--titulo-->
+        <h1 class="title flex justify-center text-center bg-gradient-to-b from-gray-900 to-sky-400 bg-clip-text text-transparent ">LO MEJOR PARA TU MASCOTA<br>LO ENCONTRAS ACA</h1>
 
         <!--banner 1-->
         <section class="bannercat">
@@ -87,9 +86,9 @@
         <!--banner 2-->
         <section class="banner1 bg-gradient-to-r from-indigo-700 to-sky-500">
             <div class="flex flex-col">
-                <a href="">Registrate como usuario</a>
-                <a href="">para obtener</a>
-                <a href="">envios gratis</a>
+                <a href="../pages/signup.html">Registrate como usuario</a>
+                <a href="../pages/signup.html">para obtener</a>
+                <a href="../pages/signup.html">envios gratis</a>
             </div>
                 <img src="../assets/img/truck2.png" alt="">
 
