--- a/pages/signup.html
+++ b/pages/signup.html
@@ -33,7 +33,7 @@
             
             <div class="icons">
                 <a class="active" href="#"><img src="../assets/img/male User.png" alt="">Ingresar</a>
-                <a href=""><img src="../assets/img/cart.png" alt="">Carrito</a>
+                <a href="./cart.html"><img src="../assets/img/cart.png" alt="">Carrito</a>
             </div>
 
         </div>
