--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
             <div class="icons">
                 <a href="./pages/signup.html"><img src="./assets/img/male User.png" alt="">Ingresar</a>
-                <a href=""><img src="./assets/img/cart.png" alt="">Carrito</a>
+                <a href="./pages/cart.html"><img src="./assets/img/cart.png" alt="">Carrito</a>
             </div>
 
         </div>
@@ -40,13 +40,13 @@
     </header>
 
     <main>
-        <h1 class="title flex justify-center bg-gradient-to-b from-gray-900 to-sky-400 bg-clip-text text-transparent ">LO MEJOR PARA TU MASCOTA</h1>
+        <h1 class="title flex justify-center text-center bg-gradient-to-b from-gray-900 to-sky-400 bg-clip-text text-transparent ">LO MEJOR PARA TU MASCOTA<br>LO ENCONTRAS ACA</h1>
 
         <section class="banner1 bg-gradient-to-r from-indigo-700 to-sky-500">
             <div class="flex flex-col">
-                <a href="">Registrate como usuario</a>
-                <a href="">para obtener</a>
-                <a href="">envios gratis</a>
+                <a href="./pages/signup.html">Registrate como usuario</a>
+                <a href="./pages/signup.html">para obtener</a>
+                <a href="./pages/signup.html">envios gratis</a>
             </div>
                 <img src="./assets/img/truck2.png" alt="">
 
@@ -78,20 +78,17 @@
 
         <section class="banner2 bg-gradient-to-l from-indigo-700 to-sky-500">
 
-
                 <div>
-                    <a href="">EXCLUSIVO llevando alimento</a>
+                    <a href="">¡OFERTA IMPERDIBLE!<br>llevando alimento</a>
 
                     <a href=""><img src="./assets/img/purina.png" alt="logo purina"></a>
 
-                    <a href="">ahorras un 15%</a>
+                    <a href=""><span class="text-8xl">25%</span> de descuento</a>
                 </div>
 
                 <div>
                 <a href=""><img src="./assets/img/perro purina.png" alt="alimento purina"></a>
                 </div>
-
-
 
         </section>
 
