creacion de pagina productos

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
         <section class="banner2 bg-gradient-to-l from-indigo-700 to-sky-500">
 
                 <div>
-                    <a href="">¡OFERTA IMPERDIBLE!<br>llevando alimento</a>
+                    <a href="./pages/producto.html">¡OFERTA IMPERDIBLE!<br>llevando alimento</a>
 
-                    <a href=""><img src="./assets/img/purina.png" alt="logo purina"></a>
+                    <a href="./pages/producto.html"><img src="./assets/img/purina.png" alt="logo purina"></a>
 
-                    <a href=""><span class="text-8xl">25%</span> de descuento</a>
+                    <a href="./pages/producto.html"><span class="text-8xl">25%</span> de descuento</a>
                 </div>
 
                 <div>
