--- a/pages/signup.html
+++ b/pages/signup.html
@@ -67,7 +67,7 @@
             <button type="submit" class="w-full bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50">Registrarse</button>
             <p class="text-gray-600 text-xs text-center mt-4">
                 ¿Ya tenes una cuenta?
-                <a href="./login.html" class="text-blue-500 hover:underline">Ingresa</a>.
+                <a href="./login.html" class="text-white hover:underline">Ingresa</a>.
             </p>
         </form>
     </div>
