mejoras en el responsive

--- a/pages/adultos.html
+++ b/pages/adultos.html
@@ -47,7 +47,7 @@
         <!--banner 1-->
         <section class="category-banner-dog">
 
-            <div>
+            <div class="max-sm:text-3xl flex justify-center">
                 <h2>Tu mejor amigo</h2>
             </div>
 
