--- a/pages/cachorros.html
+++ b/pages/cachorros.html
@@ -45,7 +45,7 @@
         <!--titulo-->
 
         <!--banner 1-->
-        <section class="category-banner-puppy flex justify-center">
+        <section class="category-banner-puppy max-sm:text-3xl flex justify-center">
 
             <div>
                 <h2>Tu mejor pequeño amigo</h2>
