--- a/pages/gatos.html
+++ b/pages/gatos.html
@@ -44,7 +44,7 @@
         <h1 class="title flex justify-center text-center bg-gradient-to-b from-gray-900 to-sky-400 bg-clip-text text-transparent ">LO MEJOR PARA TU MASCOTA<br>LO ENCONTRAS ACA</h1>
 
         <!--banner 1-->
-        <section class="category-banner-cat flex justify-end text-black">
+        <section class="category-banner-cat flex justify-center text-black max-sm:text-3xl max-sm:bg-center">
 
             <div>
                 <h2>Para tu felino</h2>
