mas mejoras al responsive

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -45,7 +45,7 @@
 
             <div>
                 <a href=""><img class="bg-white" src="../assets/img/404.png" alt="Old prince 10kg"></a>
-                <p>Producto *****<br>Precio $$$$$</p>
+                <h2>Producto *****<br>Precio $$$$$</h2>
                 <button>Comprar</button>
             </div>
 
