--- a/pages/producto.html
+++ b/pages/producto.html
@@ -58,7 +58,7 @@
         </section>
         <!--producto-->
 
-        <div class="flex flex-col items-center justify-center p-4 text-white mt-4 mb-4">
+        <div class="medios2 flex flex-col items-center justify-center p-4 text-white mt-4 mb-4">
             <p>Tarjetas aceptadas:</p>
             <div class="flex justify-start gap-3">
                 <img class="bg-white p-2 rounded-sm h-28 w-28" src="../assets/img/Visa_Logo.png" alt="">
